# syllepsis-app

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md
crates/syllepsis-core/: Cargo.toml
crates/syllepsis-core/examples/: download_builtin_models.rs  generate_earth_basemap.rs
crates/syllepsis-core/src/: config.rs  error.rs  id.rs  lib.rs  text.rs
crates/syllepsis-core/src/app/: commands.rs  commentary.rs  dto.rs  git.rs  image_assets.rs  lifecycle.rs  llm.rs  mod.rs  pack.rs  pack_manifest.rs  plugin.rs  publish.rs  query.rs  search.rs  spatial.rs  sync.rs  text_import.rs
crates/syllepsis-core/src/app/commentary/: tests.rs
crates/syllepsis-core/src/crdt/: loro_backend.rs  lww.rs  mod.rs
crates/syllepsis-core/src/embeddings/: chunk.rs  hashing.rs  input.rs  mod.rs  note.rs  onnx.rs  pooling.rs  provider.rs  repository.rs  selection.rs  sidecar.rs  vector.rs
crates/syllepsis-core/src/graph_analysis/: algorithms.rs  layout.rs  mod.rs  tests.rs  types.rs
crates/syllepsis-core/src/llm/: chat.rs  mod.rs  offline.rs  onnx.rs  prompts.rs  proposal.rs  provider.rs  selection.rs  service.rs  task.rs
crates/syllepsis-core/src/markdown/: dialect.rs  frontmatter.rs  mod.rs  parser.rs
crates/syllepsis-core/src/model/: category.rs  classification.rs  commentary.rs  metadata.rs  mod.rs  note.rs  object_type.rs  prior.rs  style_card.rs  world.rs
crates/syllepsis-core/src/onnx/: cache.rs  download.rs  execution_provider.rs  http.rs  manifest.rs  mod.rs  session.rs  status.rs  tokenizer.rs  verify.rs
crates/syllepsis-core/src/pack/: mod.rs
crates/syllepsis-core/src/plugin/: host.rs  manifest.rs  mod.rs  note_write.rs  registry.rs
crates/syllepsis-core/src/publish/: mod.rs
crates/syllepsis-core/src/search/: bm25.rs  engine.rs  exact.rs  filter.rs  mod.rs  results.rs  rrf.rs  sqlite_index.rs
crates/syllepsis-core/src/sort/: book_render.rs  mod.rs  tree.rs
crates/syllepsis-core/src/spatial/: location.rs  lookup.rs  mod.rs  overlay.rs  projection.rs  registry.rs  resolve.rs
crates/syllepsis-core/src/storage/: book.rs  layout.rs  mod.rs  registry.rs  store.rs
crates/syllepsis-core/src/sync/: activity.rs  assets.rs  cloud_index.rs  engine.rs  local_folder.rs  managed.rs  mod.rs  plan.rs  provider.rs  state.rs
crates/syllepsis-core/tests/: onnx_live.rs  plugin_host.rs
crates/syllepsis-tauri/: Cargo.toml  build.rs  oauth-client-ids.json  tauri.conf.json
crates/syllepsis-tauri/capabilities/: default.json
crates/syllepsis-tauri/src/: lib.rs  local_ai.rs  main.rs  model_bootstrap.rs  search_api_config.rs  secrets.rs  state.rs
crates/syllepsis-tauri/src/commands/: book.rs  categories.rs  cloud_llm.rs  commentary.rs  config.rs  lifecycle.rs  llm.rs  local_ai.rs  mod.rs  notes.rs  pack.rs  plugins.rs  publish.rs  search.rs  serve.rs  spatial.rs  style_cards.rs  sync.rs  text_import.rs
crates/syllepsis-tauri/src/local_ai/: power.rs  tests.rs
crates/syllepsis-tauri/src/server/: docs.rs  mcp.rs  mod.rs  rest.rs
docs/: core-concepts.md  design_details.md  index.md  llm-ai-features.md  object-types.md  open-questions.md  platform-infra.md  privacy-security.md  search.md  spatial-worlds.md  styles.md  sync-backup.md  theme-style.md  ui-views.md  vision.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/assets/earth/: README.md
frontend/src/components/: CloudLlmModelPicker.tsx  Icon.tsx  LlmJobTray.tsx  MarkdownRenderer.test.tsx  MarkdownRenderer.tsx  PageHeader.css  PageHeader.tsx  RelatedCarousel.css  RelatedCarousel.tsx  Sidebar.css  Sidebar.test.tsx  Sidebar.tsx  WorldLocationHelper.css  WorldLocationHelper.tsx  __sidebar_verify.test.tsx  useThemeIcons.ts
frontend/src/editor/: CommentaryPanel.test.tsx  CommentaryPanel.tsx  DrawingEditor.tsx  Editor.css  Editor.tsx  LlmToolsMenu.test.tsx  LlmToolsMenu.tsx  MetaPanel.test.tsx  MetaPanel.tsx  Toolbar.tsx  find.test.tsx  find.ts  pluginCodeTransformer.ts
frontend/src/editor/nodes/: CategoryNode.ts  ClozeNode.ts  PluginBlockNode.tsx  index.ts
frontend/src/lib/: api.ts  sanitize.ts  searchRelevance.test.tsx  searchRelevance.ts  store.test.tsx  store.ts  utils.ts  wholeNoteFence.test.tsx  wholeNoteFence.ts
frontend/src/theme/: dark.css  fonts.css  light.css  themes.ts  tokens.css
frontend/src/theme/icons/: sets.ts
frontend/src/views/: BookView.css  BookView.tsx  CategoryView.css  CategoryView.tsx  Diagnostics.css  Diagnostics.tsx  GraphCanvas.tsx  GraphControls.tsx  GraphView.css  GraphView.tsx  KanbanBoard.css  KanbanBoard.test.tsx  KanbanBoard.tsx  NoteActivation.test.tsx  PacksView.css  PacksView.test.tsx  PacksView.tsx  PrivacyView.css  PrivacyView.tsx  SearchView.css  SearchView.tsx  SettingsView.css  SettingsView.llm.test.tsx  SettingsView.tsx  StatsView.css  StatsView.tsx  StyleCardsView.css  StyleCardsView.tsx  TextImportView.css  TextImportView.tsx  TimelineCanvas.tsx  UnsortedQueue.css  UnsortedQueue.tsx  WorldGrid.tsx  WorldStage.tsx  WorldView.css  WorldView.tsx  graphGeometry.ts  graphInteraction.ts  kanbanModel.test.tsx  (+5 more)
frontend/tests/: earthBasemap.test.ts  graphGeometry.test.ts  graphInteraction.test.ts  timelinePresentation.test.ts  worldProjection.test.ts
plugins/: .gitignore  README.md  build.sh
plugins/pdf-import/: Cargo.toml  plugin.json
plugins/pdf-import/src/: lib.rs
plugins/syntax-highlight/: Cargo.toml  plugin.json
plugins/syntax-highlight/src/: lib.rs
scripts/: prepare-bundled-models.sh
test-content/: README.md  house-design-excerpt.md
