[workspace]
resolver = "2"
members = ["crates/syllepsis-core", "crates/syllepsis-tauri"]

# Shared dependency versions. Member crates opt in with `dep.workspace = true`,
# keeping versions consistent across the workspace (AGENTS.md: clean seams).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ulid = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }

[profile.release]
# Smaller, faster binaries for the shipped app; the POC favors size over compile time.
lto = true
codegen-units = 1
