[workspace]
resolver = "2"
members = ["crates/syllepsis-core", "crates/syllepsis-tauri"]
# The WASM plugin crates target wasm32 and carry their own `[workspace]`; keep them out of the
# host workspace so a plain `cargo build` never tries to compile them for the native target.
exclude = ["plugins/pdf-import", "plugins/syntax-highlight"]

# Shared dependency versions. Member crates opt in with `dep.workspace = true`,
# keeping versions consistent across the workspace (AGENTS.md: clean seams).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# NOTE: `serde_yaml` is marked deprecated upstream, but it targets YAML 1.2
# semantics (stable since 2009) and is broadly considered safe to keep using
# for now while tracking migration options.
serde_yaml = "0.9"
ulid = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
sha2 = "0.10"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
tracing = "0.1"
ndarray = "0.17"
umap-rs = "=0.4.5"
graphops = "=0.4.3"
hdbscan = { version = "=0.12.0", default-features = false, features = ["serial"] }
rand = "0.9"

[profile.release]
# Smaller, faster binaries for the shipped app; the POC favors size over compile time.
lto = true
codegen-units = 1
