[package]
name = "syllepsis-core"
version = "0.1.0"
edition = "2021"
description = "Platform-agnostic domain logic for Syllepsis (notes, sorting, storage, markdown dialect)."
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
pulldown-cmark = { workspace = true }
# sha2 powers the always-on model-file integrity check (onnx::verify). Pure Rust, tiny.
sha2 = { workspace = true }
base64 = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
ndarray = { workspace = true }
umap-rs = { workspace = true }
graphops = { workspace = true }
hdbscan = { workspace = true }
rand = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
roxmltree = "0.20"

# Heavy native ML dependencies for the real local-model path live behind the `onnx` feature so
# the default build/test stays fast. `ort` is the ONNX Runtime; `tokenizers` is the Hugging Face
# fast tokenizer the local models ship; `reqwest` fetches the first-run model download.
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std", "ndarray", "download-binaries", "tls-rustls", "coreml"] }
# default-features off drops the oniguruma (C) and esaxx (C++) builds; Qwen's ByteLevel BPE
# tokenizer.json loads without them.
tokenizers = { version = "0.23", optional = true, default-features = false, features = ["fancy-regex"] }
reqwest = { version = "0.13", optional = true, default-features = false, features = ["blocking", "rustls"] }

# Loro is the fine-grained text CRDT (Phase 4). Pure Rust, but kept behind a feature so the default
# build/test runs on the always-compiled LWW-register backend (crdt::lww), exactly as the ONNX path
# keeps the heavy ML deps optional. See crates/syllepsis-core/src/crdt/loro_backend.rs.
loro = { version = "1.13", optional = true }

# Extism is the WASM plugin runtime (wraps wasmtime). Kept behind a feature so the default
# build/test never compiles wasmtime; the always-on plugin::manifest/registry have no WASM dep.
# See crates/syllepsis-core/src/plugin/host.rs.
extism = { version = "1", optional = true }

[features]
default = []
# Enables the real ONNX-backed embedder (EmbeddingGemma 300M) and local LLM (Gemma 4 E2B),
# plus the HTTP model fetcher. Pulls native ONNX Runtime binaries at build time.
onnx = ["dep:ort", "dep:tokenizers", "dep:reqwest"]
# Enables the fine-grained Loro text CRDT backend behind the CrdtBackend seam (crdt::loro_backend).
loro = ["dep:loro"]
# Enables the WASM plugin runtime (plugin::host) so plugins can actually execute.
extism = ["dep:extism"]

[dev-dependencies]
tempfile = "3"
