[package]
name = "syllepsis-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri shell for Syllepsis: IPC commands, state management, and the desktop app binary."

[lib]
name = "syllepsis_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "syllepsis"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
syllepsis-core = { path = "../syllepsis-core", features = ["onnx", "loro"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
notify = "8"
opendal = { version = "0.57", features = ["blocking", "services-gdrive", "services-dropbox", "services-onedrive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
